Set up a navbar

--- a/src/navbar/navbar.css
+++ b/src/navbar/navbar.css
@@ -2,3 +2,28 @@
     background-color: #222222;
     height: 58px;
 }
+
+.navbar__logo {
+    margin-left: 14.7px;
+    margin-top: 15px;
+}
+
+.navbar__preview {
+    width: 87.23px;
+    height: 34px;
+    position: absolute;
+    top: 12px;
+    right: 12px;
+    border-radius: 5px;
+    border: none;
+    background-color: #3E87F8;
+}
+
+.navbar__preview__text {
+    font-family: 'Inter', sans-serif;
+    font-size: 14px;
+    line-height: 17px;
+    letter-spacing: 0em;
+    text-align: center;
+    color: white;
+}
