Update settings panel

--- a/src/index.css
+++ b/src/index.css
@@ -5,5 +5,11 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  overflow-y: hidden;
+  overflow-x: hidden;
   background-color: #E5E5E5;
+}
+
+ul {
+  list-style-type: none;
 }
