--- a/src/main/settings-panel/settings-panel.css
+++ b/src/main/settings-panel/settings-panel.css
@@ -19,6 +19,7 @@
 }
 
 .settings-panel__options__option {
+    position: relative;
     width: 214px;
     height: 16px;
     display: flex;
@@ -65,6 +66,7 @@ input[type=range]::-webkit-slider-runnable-track {
 input[type=range]::-webkit-slider-thumb {
     -webkit-appearance: none;
     appearance: none;
+    position: relative;
     width: 12px;
     height: 12px;
     background-color: white;
@@ -75,6 +77,34 @@ input[type=range]::-webkit-slider-thumb {
     border-radius: 50%;
     margin-top: -5px;
 }
+
+input[type="range"]::before,
+input[type="range"]::after {
+  content: "";
+  position: absolute;
+}
+
+input[type=range]::before {
+    position: absolute;
+    top: 7px;
+    height: 2px;
+    right: 50%;
+    border-radius: 0px 5px 5px 0px;
+    background-color: #AFAFAF;
+    z-index: 1;
+    width: var(--before-width, 0%);
+  }
+  
+  input[type=range]::after {
+    position: absolute;
+    top: 7px;
+    left: 50%;
+    height: 2px;
+    border-radius: 5px 0px 0px 5px;
+    background-color: #AFAFAF;
+    z-index: 1;
+    width: var(--after-width, 0%);
+  }
 
 input[type=range]::-moz-range-track {
     -moz-appearance: none;
