--- a/src/main/settings-panel/settings-panel.css
+++ b/src/main/settings-panel/settings-panel.css
@@ -47,7 +47,7 @@
     width: 30px;   
 }
 
-input[type=range] {
+.settings-panel__options__option input[type=range] {
     -webkit-appearance: none;
     appearance: none;
     background: transparent;
@@ -55,7 +55,7 @@ input[type=range] {
     /* width: 118px; */
 }
 
-input[type=range]::-webkit-slider-runnable-track {
+.settings-panel__options__option input[type=range]::-webkit-slider-runnable-track {
     -webkit-appearance: none;
     appearance: none;
     background-color: #E0E0E0;
@@ -63,7 +63,7 @@ input[type=range]::-webkit-slider-runnable-track {
     border-radius: 1px;
 }
 
-input[type=range]::-webkit-slider-thumb {
+.settings-panel__options__option input[type=range]::-webkit-slider-thumb {
     -webkit-appearance: none;
     appearance: none;
     position: relative;
@@ -84,7 +84,7 @@ input[type="range"]::after {
   position: absolute;
 }
 
-input[type=range]::before {
+.settings-panel__options__option input[type=range]::before {
     position: absolute;
     top: 7px;
     height: 2px;
@@ -95,7 +95,7 @@ input[type=range]::before {
     width: var(--before-width, 0%);
   }
   
-  input[type=range]::after {
+  .settings-panel__options__option input[type=range]::after {
     position: absolute;
     top: 7px;
     left: 50%;
@@ -106,7 +106,7 @@ input[type=range]::before {
     width: var(--after-width, 0%);
   }
 
-input[type=range]::-moz-range-track {
+.settings-panel__options__option input[type=range]::-moz-range-track {
     -moz-appearance: none;
     appearance: none;
     background-color: #E0E0E0;
@@ -114,7 +114,7 @@ input[type=range]::-moz-range-track {
     width: 118px;
 }
 
-input[type=range]::-moz-range-thumb {
+.settings-panel__options__option input[type=range]::-moz-range-thumb {
     -webkit-appearance: none;
     appearance: none;
     width: 12px;
@@ -128,6 +128,6 @@ input[type=range]::-moz-range-thumb {
     margin-top: -5px;
 }
 
-input[type=range]::-moz-focus-outer {
+.settings-panel__options__option input[type=range]::-moz-focus-outer {
     border: 0;
 }
