--- a/src/main/settings-panel/settings-panel.css
+++ b/src/main/settings-panel/settings-panel.css
@@ -12,10 +12,9 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    row-gap: 16px;
+    row-gap: 15px;
     width: 100%;
-    height: 16px;
-    padding: 15px 0px;
+    padding: 0px 0px;
 }
 
 .settings-panel__options__option {
@@ -26,7 +25,7 @@
     flex-direction: row;    
     justify-content: center;
     align-items: center;
-    column-gap: 10px;
+    column-gap: 10px;  
 }
 
 .settings-panel__options__option__label {
@@ -35,7 +34,8 @@
     line-height: 13.31px;
     text-align: right;
     color: #444444;
-    width: 30px; 
+    width: 40px; 
+    min-width: fit-content;
 }
 
 .settings-panel__options__value {
@@ -51,8 +51,7 @@
     -webkit-appearance: none;
     appearance: none;
     background: transparent;
-    /* height: 16px; */
-    /* width: 118px; */
+    width: 118px;
 }
 
 .settings-panel__options__option input[type=range]::-webkit-slider-runnable-track {
@@ -61,6 +60,7 @@
     background-color: #E0E0E0;
     height: 2px;
     border-radius: 1px;
+    width: 118px;
 }
 
 .settings-panel__options__option input[type=range]::-webkit-slider-thumb {
@@ -76,6 +76,7 @@
     cursor: pointer;
     border-radius: 50%;
     margin-top: -5px;
+    z-index: 2;
 }
 
 input[type="range"]::before,
