--- a/src/main/settings-panel/settings-panel.css
+++ b/src/main/settings-panel/settings-panel.css
@@ -145,21 +145,19 @@
 
 .settings-panel__options__easing-options-list {
     position: absolute;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: start;
+    display: none;
     gap: 10px;
-    top: 0px;
+    top: 100%;
     right: 15%;
     width: 118px;
     border: none;
     padding: 0px;
     background-color: white;
-    border-radius: 15px;
+    border-radius: 5px;
     box-shadow: #444444;
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2);
     padding: 10px;
+    z-index: 2;
 }
 
 .settings-panel__options__easing-options-list__option {
@@ -173,15 +171,74 @@
     text-align: left;
     color: #444444;
     cursor: pointer;
-    border-radius: 5px;
-    padding: 2px;
     gap: 7px;
 }
 
 .settings-panel__options__easing-options-list__option:hover {
-    background-color: #e9e7e7;
+    outline: solid;
+    outline-color: rgb(223, 255, 255);
+
 }
 
-/* .settings-panel__options__easing-options-list__option {
-    margin-left: 7px;
-} */
+.settings-panel__options__easing-options-list__option:hover+.settings-panel__options__easing-options-list {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: flex-start;
+}
+
+.settings-panel__options__easing-options-list:hover {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: flex-start;
+}
+
+.settings-panel__options__option-switch {
+    position: relative;
+    display: inline-block;
+    width: 20px;
+    height: 12px;
+}
+
+.settings-panel__options__option-switch input {
+    opacity: 0;
+    width: 0;
+    height: 0;
+}
+
+.settings-panel__options__option-slider {
+    position: absolute;
+    cursor: pointer;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    border-radius: 34px;
+    background-color: #AFAFAF;
+    transition: .4s;
+}
+
+.settings-panel__options__option-slider:before {
+    position: absolute;
+    content: "";
+    height: 8px;
+    width: 8px;
+    left: 2px;
+    bottom: 2px;
+    border-radius: 50%;
+    background-color: white;
+    transition: .4s;
+}
+
+.settings-panel__options__option-switch input:checked+.settings-panel__options__option-slider {
+    background-color: #2196F3;
+}
+
+.settings-panel__options__option-switch input:focus+.settings-panel__options__option-slider {
+    box-shadow: 0 0 1px #2196F3;
+}
+
+.settings-panel__options__option-switch input:checked+.settings-panel__options__option-slider:before {
+    transform: translateX(8px);
+}
