--- a/src/index.css
+++ b/src/index.css
@@ -8,6 +8,14 @@ body {
   overflow-y: hidden;
   overflow-x: hidden;
   background-color: #E5E5E5;
+  width: 100%;
+  height: 100dvh;
+}
+
+main {
+  position: relative;
+  width: 100%;
+  height: 100dvh;
 }
 
 ul {
