--- a/src/main/container/container.css
+++ b/src/main/container/container.css
@@ -1,6 +1,7 @@
 .container {
     display: flex;
     justify-content: center;
+    align-items: center;
     width: calc(100% - 240px);
     height: 100dvh;
     box-sizing: border-box;
@@ -13,7 +14,6 @@
     align-items: center;
     width: 150px;
     height: 70px;
-    margin-top: 50%;
     text-align: center;
     color: white;
     border-radius: 5px;
@@ -33,13 +33,8 @@
     border-radius: 5px;
     background-color: #6bb5f1;
     z-index: -1;
-    transition: all 2s ease-out;
+    transition: all 0.3s ease-out;
 }
-
-.container__element:hover .container__element-position-preview {
-    cursor: pointer;
-    transform: translate(100%, 100%);
-  }
 
 .container__element__text {
     font-size: 18px;
