--- a/src/top-panel/top-panel.css
+++ b/src/top-panel/top-panel.css
@@ -1,29 +1,29 @@
 .top-panel {
+    position: relative;
+    display: flex;
+    flex-direction: row;
+    gap: 10px;
+    justify-content: center;
+    align-items: center;
     background-color: #222222;
     height: 58px;
 }
 
-.top-panel__logo {
-    margin-left: 14.7px;
-    margin-top: 15px;
-}
-
-.top-panel__preview {
-    width: 87.23px;
-    height: 34px;
-    position: absolute;
-    top: 12px;
-    right: 12px;
-    border-radius: 5px;
-    border: none;
-    background-color: #3E87F8;
-}
-
-.top-panel__preview__text {
-    font-size: 14px;
-    font-weight: 500;
-    line-height: 17px;
-    letter-spacing: 0em;
-    text-align: center;
+.top-panel__title {
     color: white;
+    display: inline-block;
+    font-size: 24px;
+    font-weight: 500;
+    text-align: center;
+    line-height: 58px;
+}
+
+.top-panel__github {
+    position: absolute;
+    right: 20px;       
+}
+
+.top-panel__github__image {
+    height: 30px;
+    width: 30px;
 }
