Add run and reset buttons

--- a/src/main/settings-panel/settings-panel.css
+++ b/src/main/settings-panel/settings-panel.css
@@ -244,3 +244,29 @@
 .settings-panel__options__option-switch input:checked+.settings-panel__options__option-slider:before {
     transform: translateX(8px);
 }
+
+.settings-panel__options__buttons {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: center;
+    gap: 5px;
+    font-weight: 600;
+    width: 90%;   
+    color: #444444;
+}
+
+.settings-panel__options__run-button {
+    border: solid 2px #AFAFAF;
+    border-radius: 25px;
+    padding: 5px;
+    width: 40%;
+    text-align: center;
+    cursor: pointer;
+    transition: all 0.3s ease-out;
+}
+
+.settings-panel__options__run-button:hover {
+    outline: solid #444444 1px;
+    box-shadow: 2px 2px 4px  #AFAFAF;
+}
