--- a/src/index.css
+++ b/src/index.css
@@ -5,7 +5,7 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  overflow-y: hidden;
+  /* overflow-y: hidden; */
   overflow-x: hidden;
   background-color: #E5E5E5;
   width: 100%;
