--- a/src/main/container/container.css
+++ b/src/main/container/container.css
@@ -22,6 +22,7 @@
     align-items: center;
     transition: all 0.3s ease-out;
 }
+
 .container__elements-position-preview {
     position: absolute;
     display: flex;
@@ -40,4 +41,25 @@
     letter-spacing: 1px;
     text-align: center;
     color: white;
+}
+
+@media only screen and (max-width: 600px) {
+    .container {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        width: 100vw;
+        height: 80vh;
+        box-sizing: border-box;
+    }
+
+    .container__element__image {
+        width: 100px;
+        height: 50px;
+    }
+
+    .container__elements-position-preview {
+        width: 100px;
+        height: 50px;
+    }
 }
