--- a/src/main/settings-panel/settings-panel.css
+++ b/src/main/settings-panel/settings-panel.css
@@ -253,7 +253,7 @@
     gap: 5px;
     font-weight: 500;
     font-size: 13px;
-    width: 90%;   
+    width: 90%;
     color: #444444;
 }
 
@@ -270,5 +270,15 @@
 
 .settings-panel__options__button:hover {
     outline: solid #444444 1px;
-    box-shadow: 2px 2px 4px  #AFAFAF;
+    box-shadow: 2px 2px 4px #AFAFAF;
+}
+
+@media only screen and (max-width: 600px) {
+    .settings-panel {
+        min-height: 300px;
+        min-width: 100%;
+        right: auto;
+        left: auto;
+        top: 80dvh;
+    }
 }
