--- a/src/index.css
+++ b/src/index.css
@@ -5,19 +5,23 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  /* overflow-y: hidden; */
+  overflow-y: hidden;
   overflow-x: hidden;
   background-color: #E5E5E5;
   width: 100%;
-  height: 100dvh;
+  min-height: 100vh;
 }
 
 main {
   position: relative;
-  width: 100%;
-  height: 100dvh;  
 }
 
 ul {
   list-style-type: none;
+}
+
+@media only screen and (max-width: 768px) {
+  body {
+    overflow-y: scroll;
+  }
 }
