--- a/src/main/container/container.css
+++ b/src/main/container/container.css
@@ -43,13 +43,11 @@
     color: white;
 }
 
-@media only screen and (max-width: 600px) {
+@media only screen and (max-width: 768px) {
     .container {
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        width: 100vw;
-        height: 80vh;
+        margin: 0px auto;
+        max-width: 100%;
+        min-height: 80dvh;
         box-sizing: border-box;
     }
 
